# skyshark

./: README.md
batch/: README  load_duckdb.sql  queries_duckdb.sql
benchmark/: .gitignore  CMakeLists.txt  README.md  config.json.example  converter.cpp  server.cpp
benchmark/kafka/: docker-compose-kafka.yaml
benchmark/src/: config.h  data_loader.cpp  network_statistics.cpp  query_results.cpp  receiver.cpp  ring_buffer.cpp  sender.cpp  state.cpp
benchmark/src/adapter/: AdapterInterface.h  KafkaAdapter.cpp  TCPAdapter.cpp  UDPAdapter.cpp  ZeroMQAdapter.cpp
benchmark/src/exceptions/: ConfigException.cpp  FileNotFoundException.cpp  ParameterNotFoundException.cpp  SocketErrorException.cpp
benchmark/src/include/: csv.h  json.hpp
tooling/: .gitignore  README.md  create_schedule.py  extract_callsigns.py  extract_flights.py  flight.py  get_routes.py  requirements.txt  state.py
